# inflationary-isopoda

./: .gitignore  README.md  docker-compose.yaml
IntentClassification/: Dockerfile  README.md  docker-compose.yaml  requirements.txt
IntentClassification/src/: app.py  data_models.py  intent_classifier.py  model.py
SpeechToText/: Dockerfile  docker-compose.yaml  requirements.txt
SpeechToText/src/: app.py  speech_transcription.py
WebInterface/: Dockerfile  authentication.py  constants.py  docker-compose.yaml  main.py  pyproject.toml  structure.py  sup.py
WebInterface/src/: authentication.py  constants.py  main.py  pyproject.toml  structure.py  sup.py
WebInterface/src/conversation/: __init__.py  main.py
WebInterface/src/mongodb_parser/: __init__.py  authentication.py  clients.py  conversations.py  supports.py
WebInterface/src/static/css/: main.css
WebInterface/src/static/js/: script.js
WebInterface/src/templates/: base.html  client_form.html  login.html
WebInterface/templates/: base.html  client_form.html
mongodb/: docker-compose.yaml
